--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookTrack</title>
-    <link rel="stylesheet" href="./src/resources/index.css" />
+    <link rel="stylesheet" href="./resources/index.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/kws5epv.css">
   </head>
   <body>
     <div id="root">not rendered</div>
-    <script src="./App.js"></script>
+    <script src="./index.jsx" type="module"></script>
   </body>
 </html>
