--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookTrack</title>
+    <link rel="icon" href="./resources/images/logo.png">
     <link rel="stylesheet" href="./resources/index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/kws5epv.css">
   </head>
